# zed-local-history

./: .gitignore  Cargo.toml  README.md  RHYTHM.md  llms.txt
.github/workflows/: ci.yml  release.yml
agents/: AGENTS.md  CURRENT_STATUS.md  DEVELOPMENT_PLAN.md  FINALIZE.md  GOALS.md  README.md  ZED_MANUAL_TESTING.md
crates/local-history-cli/: Cargo.toml  README.md
crates/local-history-cli/src/: main.rs
crates/local-history-core/: Cargo.toml  README.md
crates/local-history-core/src/: diff.rs  error.rs  hashing.rs  identity.rs  ignore.rs  layout.rs  lib.rs  model.rs  storage.rs  time_format.rs
crates/local-history-mcp/: Cargo.toml  README.md
crates/local-history-mcp/src/: main.rs
crates/local-history-mcp/tests/: stdio_smoke.rs
crates/local-history-sidecar/: Cargo.toml  README.md
crates/local-history-sidecar/src/: main.rs  runtime.rs
editors/zed/: Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm  rust-toolchain.toml
editors/zed/src/: lib.rs
scripts/: install.sh
xtask/: Cargo.toml
xtask/src/: main.rs
