[workspace]
resolver = "2"
members = [
    "crates/local-history-core",
    "crates/local-history-sidecar",
    "crates/local-history-cli",
    "crates/local-history-mcp",
    "xtask",
]
exclude = ["editors/zed"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
