[package]
name = "local-history-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "User-facing CLI for zed-local-history."

[[bin]]
name = "local-history"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.23", features = ["derive"] }
local-history-core = { path = "../local-history-core" }
time = { version = "=0.3.36", features = ["formatting", "macros", "parsing"] }
