[package]
name = "local-history-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Native sidecar entrypoint for zed-local-history."

[dependencies]
local-history-core = { path = "../local-history-core" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.133"
time = { version = "=0.3.36", features = ["formatting", "macros"] }
